--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.9",
     "stylelint-selector-bem-pattern": "^2.1.1",
     "typescript": "5.0.2",
-    "use-debounce": "^9.0.3"
+    "use-debounce": "^9.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
     "babel-plugin-styled-components": "^2.0.7",
     "husky": "^8.0.3",
