--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "formik": "^2.2.9",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.2",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.9",
     "stylelint-selector-bem-pattern": "^2.1.1",
     "typescript": "5.0.2",
     "use-debounce": "^9.0.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.2",
