--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.16",
     "@mui/material": "^5.11.14",
-    "@mui/styled-engine-sc": "^5.11.11",
-    "@types/node": "18.15.10",
-    "@types/react": "18.0.29",
-    "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -35,6 +31,9 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
+    "@types/node": "18.15.10",
+    "@types/react": "^18.0.32",
+    "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
