--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.2.9",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.9",
@@ -33,6 +34,7 @@
     "@commitlint/config-conventional": "^17.0.2",
     "@types/node": "18.15.10",
     "@types/react": "^18.0.32",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.1",
